--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "name": "Launch Driver",
             "request": "launch",
             "mainClass": "cetus.exec.Driver",
-            "args": "-alias=2 -Program-analysis ./NPB3.3-SER-C/CG/cg.c",
+            "args": "-alias=2 -Program-analysis ../../SNU_NPB-1.0.3/NPB3.3-SER-C/CG/cg.c",
         }
     ]
 }
