--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "name": "Launch Driver",
             "request": "launch",
             "mainClass": "cetus.exec.Driver",
-            "args": "-alias=2 -program-analysis /home/miguel/Desktop/FusedMM/FusedMM/fusedMM.c",
+            "args": "-alias=2  /home/miguel/Desktop/BecnhmarksPaper/NPB3.3-SER-C/CG/cg.c",
             "projectName": "cetus-1.4.4"
         }
     ]
